# wora

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  shell.nix
.github/workflows/: ci.yml
examples/: async_daemon.rs  basic.rs  onboarding.rs  procfs.rs  sysinfo.rs  systemd_daemon.rs  systemd_daemon.service
src/: boot.rs  dirs.rs  errors.rs  events.rs  exec.rs  exec_env.rs  exec_unix.rs  lib.rs  lock.rs  metrics.rs  o11y.rs  prelude.rs  restart_policy.rs  vfs.rs
tests/: runtime.rs
