[package]
name = "wora"
authors = [ "Adam Flott <adam@adamflott.com>" ]
version = "0.0.8"
edition = "2021"
rust-version = "1.80"
description = "A framework for building applications (daemons, etc) that run in different environments (Linux, Kubernetes, etc)."
readme = "README.md"
repository = "https://github.com/adamflott/wora"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]

[dependencies]
async-trait = "~0.1.81"
chrono = { version = "~0.4.38", features = ["serde"] }
clap = { version = "~4.5.13", features = ["derive", "env", "cargo" ] }
decimal-percentage = "~0.1.4"
derive-getters = "0.4.0"
derive_builder = "0.20.0"
directories = "~5.0.1"
futures = "~0.3.30"
libc = "~0.2.155"
log = "~0.4.22"
nix = { version = "~0.29.0", features = ["process", "mman", "resource", "fs"]}
notify = { version = "~6.1.1", features = ["serde"] }
opentelemetry = "~0.24.0"
os_info = "~3.8.2"
proc-lock = "~0.4.0"
serde = { version = "~1.0.197", features = ["derive"] }
serde_derive = "~1.0.197"
serde_json = "~1.0.122"
sysinfo = "~0.31.2"
thiserror = "~1.0.63"
tokio = { version = "~1.39.2", features = ["full"] }
toml = "~0.8.19"
tracing = "~0.1.40"
tracing-subscriber = "~0.3.18"
users = "~0.11.0"

[target.'cfg(linux)'.dependencies]
procfs = { version = "0.16.0", features = ["serde1"] }

[build-dependencies]
pkg-config = "0.3.28"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.5"
