[package]
name = "wora"
authors = [ "Adam Flott <adam@adamflott.com>" ]
version = "0.0.10"
edition = "2024"
rust-version = "1.85"
description = "A framework for building applications (daemons, etc) that run in different environments (Linux, Kubernetes, etc)."
readme = "README.md"
repository = "https://github.com/adamflott/wora"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]

[dependencies]
async-trait = "~0.1.86"
chrono = { version = "~0.4.40", features = ["serde"] }
clap = { version = "~4.5.31", features = ["derive", "env", "cargo" ] }
decimal-percentage = "~0.1.4"
derive-getters = "~0.5.0"
derive_builder = "~0.20.2"
directories = "~6.0.0"
futures = "~0.3.31"
libc = "~0.2.170"
log = "~0.4.26"
nix = { version = "~0.29.0", features = ["process", "mman", "resource", "fs"]}
notify = { version = "~8.0.0", features = ["serde"] }
opentelemetry = "~0.28.0"
os_info = "~3.10.0"
proc-lock = "~0.4.0"
serde = { version = "~1.0.218", features = ["derive"] }
serde_derive = "~1.0.218"
serde_json = "~1.0.139"
sysinfo = "~0.33.1"
thiserror = "~2.0.11"
tokio = { version = "~1.43.0", features = ["full"] }
toml = "~0.8.20"
tracing = "~0.1.41"
tracing-subscriber = "~0.3.19"
users = "~0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.5"
procfs = { version = "0.16.0", features = ["serde1"] }

[build-dependencies]
pkg-config = "0.3.28"

