[package]
name = "wora"
authors = [ "Adam Flott <adam@adamflott.com>" ]
version = "0.0.13"
edition = "2024"
rust-version = "1.95"
description = "A framework for building applications (daemons, etc) that run in different environments (Linux, Kubernetes, etc)."
readme = "README.md"
repository = "https://github.com/adamflott/wora"
license = "MIT OR Apache-2.0"
categories = ["development-tools"]

[dependencies]
async-trait = "0.1.89"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "env", "cargo" ] }
decimal-percentage = "0.1.4"
derive-getters = "0.5.0"
derive_builder = "0.20.2"
directories = "6.0.0"
futures = "0.3.32"
libc = "0.2.186"
log = "0.4.29"
nix = { version = "0.31.3", features = ["process", "mman", "resource", "fs"]}
notify = { version = "8.2.0", features = ["serde"] }
opentelemetry = "0.32.0"
os_info = "3.15.0"
proc-lock = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_derive = "1.0.228"
serde_json = "1.0.150"
sysinfo = "0.39.2"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
users = "0.11.0"

[target.'cfg(target_os = "linux")'.dependencies]
caps = "0.5.5"
procfs = { version = "0.18.0", features = ["serde1"] }

[build-dependencies]
pkg-config = "0.3.33"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
